bubba-frontend (2.1.4) lucid; urgency=low

  * Initial work on multiple language support
  * Possibility to add user defined languages. 
  * Select default language in first wizard page. 
  * Moved language selection to seperate wizard page. 

 -- PA Nilsson <pa@excito.com>  Tue, 28 Sep 2010 13:28:21 +0200

bubba-frontend (2.1.3) vincent hugo; urgency=low

  * Increase timeout on backup/restore settings.

 -- Tor Krill <tor@excito.com>  Sun, 12 Sep 2010 23:28:55 +0200

bubba-frontend (2.1.2) vincent hugo; urgency=low

  * Don't error if print info fields are missing 

 -- Tor Krill <tor@excito.com>  Thu, 09 Sep 2010 17:44:38 +0200

bubba-frontend (2.1.1) hugo vincent; urgency=low

  * Added missing image

 -- PA Nilsson <pa@excito.com>  Fri, 03 Sep 2010 20:28:13 +0200

bubba-frontend (2.1.0) vincent hugo; urgency=low

  * Updated main logotyp
  * Bumped revision

 -- PA Nilsson <pa@excito.com>  Fri, 03 Sep 2010 20:20:12 +0200

bubba-frontend (2.1~pre19) vincent hugo; urgency=low

  * Migrate inifiles for libbubba-php-info as well
    (This stopped image building)
  * Fix some typos in language files

 -- Tor Krill <tor@excito.com>  Wed, 01 Sep 2010 10:03:10 +0200

bubba-frontend (2.1~pre18) vincent hugo; urgency=low

  * Don't set errexit on postinst 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:49:09 +0200

bubba-frontend (2.1~pre17) vincent hugo; urgency=low

  * Debug 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:32:39 +0200

bubba-frontend (2.1~pre16) vincent hugo; urgency=low

  * Disable wlan settings if user has not set a timezone 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:20:17 +0200

bubba-frontend (2.1~pre15) hugo vincent; urgency=low

  * First commit of changing Bubba to B3 

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 12:53:33 +0200

bubba-frontend (2.1~pre14) hugo vincent; urgency=low

  * Added dep on libbubba-info-php

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 09:09:52 +0200
