@@ -4,8 +4,9 @@ bubba-frontend (2.1.4) lucid; urgency=low
   * Possibility to add user defined languages. 
   * Select default language in first wizard page. 
   * Moved language selection to seperate wizard page. 
+  * Added possibility for user to select system default lang. 
 
- -- PA Nilsson <pa@excito.com>  Tue, 28 Sep 2010 13:28:21 +0200
+ -- PA Nilsson <pa@excito.com>  Tue, 28 Sep 2010 14:03:48 +0200
 
 bubba-frontend (2.1.3) vincent hugo; urgency=low
 
